Add notification on problem creation

--- a/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
+++ b/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
@@ -86,6 +86,6 @@
 
         </nb-card>
 
-        <button nbButton status="primary" class="submit">Create problem</button>
+        <button nbButton status="primary" class="submit" (click)="createProblem()">Create problem</button>
     </div>
 </div>
