Fix: Cannot create new problem

--- a/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
+++ b/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
@@ -86,6 +86,7 @@
 
         </nb-card>
 
-        <button nbButton status="primary" class="submit" (click)="createProblem()">Create problem</button>
+        <button *ngIf="allowCreateProblem" nbButton status="primary" class="submit" (click)="createProblem()">Create
+            problem</button>
     </div>
 </div>
