--- a/webapp/src/app/pages/home/components/navbar/navbar.component.scss
+++ b/webapp/src/app/pages/home/components/navbar/navbar.component.scss
@@ -1,9 +1,4 @@
-.login {
-    float: right;
-}
-
-#title {
-    color: white;
-    font-size: 2em;
-    font-weight: bold;
-}
+// #title {
+//     color: white;
+//     font-weight: bold;
+// }
