--- a/webapp/src/app/pages/home/home.component.scss
+++ b/webapp/src/app/pages/home/home.component.scss
@@ -1,3 +1,14 @@
 nb-layout-header {
     background-color: #426EF0;
 }
+
+#title {
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.login {
+    color: white;
+    font-weight: bold;
+}
