--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -4,7 +4,7 @@
             <nb-card-body>
                 <nb-tabset>
                     <nb-tab tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
-                        <h1>
+                        <h1 class="title">
                             <strong>{{problem.title}}</strong>
                         </h1>
                         <p class="date">{{problem.createDate | date: "medium"}}</p>
@@ -13,28 +13,37 @@
                                 [text]="tag"></nb-tag>
                         </div>
                         <div class="description">
-                            <p><strong>Description:</strong>{{problem.description}}</p>
+                            <p style="line-height: 35px;"><strong>Description:</strong>{{problem.description}}</p>
                         </div>
                         <hr>
                         <div class="content">
-                            <p><strong>Content:</strong>{{problem.content}}</p>
+                            <p><strong>Problem statement:</strong></p>
+                            <markdown>
+                                This is really ***very*** important text.
+                            </markdown>
                         </div>
                         <hr>
-                        <p><strong>Example:</strong> </p>
-                        <div *ngFor="let sample of problem.samples" class="example">
-                            <div class="example-left">
-                                <input disabled [value]="sample.input" class="input-ex" type="text" name="" id="">
+                        <p><strong>Samples:</strong> </p>
+                        <div *ngFor="let sample of problem.samples, index as i">
+                            <p style="margin-top: 10px; font-weight: bold;">case# {{i + 1}}</p>
+                            <div class="example">
+                                <div class="example-left">
+                                    <textarea disabled [value]="sample.input" class="input-ex" type="text" name=""
+                                        id=""></textarea>
+                                </div>
+                                <div class="example-right">
+                                    <textarea disabled [value]="sample.output" class="input-ex" type="text" name=""
+                                        id=""></textarea>
+                                </div>
                             </div>
-                            <div class="example-right">
-                                <input disabled [value]="sample.output" class="input-ex" type="text" name="" id="">
-                            </div>
+
                         </div>
                     </nb-tab>
                     <nb-tab tabTitle="submission" tabIcon="award-outline" responsive>
-                        <p>List of <strong>Submission</strong>.</p>
+                        <app-submission></app-submission>
                     </nb-tab>
                     <nb-tab tabTitle="HISTORY" tabIcon="email-outline" responsive>
-                        <p>List of <strong>transactions</strong>.</p>
+                        <app-history></app-history>
                     </nb-tab>
                 </nb-tabset>
             </nb-card-body>
