--- a/webapp/src/app/pages/home/home.component.html
+++ b/webapp/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
                 Google</button>
         </span>
     </nb-layout-header>
-    <nb-layout-column class="colored-column-basic">
+    <nb-layout-column style="padding: 0;" class="colored-column-basic">
         <router-outlet></router-outlet>
     </nb-layout-column>
 </nb-layout>
