--- a/webapp/src/app/pages/home/components/problem/problem.component.scss
+++ b/webapp/src/app/pages/home/components/problem/problem.component.scss
@@ -1,18 +1,25 @@
 #parent {
-    display: flex;
-    width: 100%;
-    gap: 1em;
+    // display: flex;
+    // width: 100%;
+    // gap: 1em;
+    display: grid;
+    grid-template-columns: minmax(700px, 25%) 1fr;
 }
 
-.left {
-    width: 50%;
-}
+// .left {
+//     // width: 50%;
+//     flex: 1 1 300px; /*  Stretching: */
+//     flex: 0 1 300px; /*  No stretching: */
+//     margin: 5px;
+// }
 
-.right {
-    width: 50%;
-    height: 770px;
-    background-color: rgb(25, 33, 112);
-}
+// .right {
+//     // width: 50%;
+//     // height: 75vh;
+//     flex: 1 1 300px; /*  Stretching: */
+//     flex: 0 1 300px; /*  No stretching: */
+//     margin: 5px;
+// }
 
 .title {
     font-size: 1.2rem;
