--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -1,6 +1,6 @@
 <div id="parent">
     <div class="left">
-        <nb-card>
+        <nb-card style="margin-bottom: 0;">
             <nb-card-body>
                 <nb-tabset>
                     <nb-tab tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
@@ -49,5 +49,17 @@
             </nb-card-body>
         </nb-card>
     </div>
-    <div class="right"></div>
+    <div class="right">
+        <nb-card style="margin-bottom: 0;">
+            <nb-card-body>
+                <nb-select placeholder="Language">
+                    <nb-option>C#</nb-option>
+                    <nb-option>C++</nb-option>
+                    <nb-option>Javascript</nb-option>
+                </nb-select>
+                <button nbButton>Run</button>
+            </nb-card-body>
+        </nb-card>
+        <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
+    </div>
 </div>
