--- a/webapp/src/app/pages/home/components/main/main.component.html
+++ b/webapp/src/app/pages/home/components/main/main.component.html
@@ -1,19 +1,20 @@
 <div id="body">
     <div class="list">
-        <nb-card *ngFor="let card of cards" class="card" style="position: relative;">
+        <nb-card *ngFor="let problem of problems" class="card" style="position: relative;"
+            (click)="viewProblem(problem)">
             <nb-card-header>
                 <div style="display: flex;">
-                    <p class="title">{{card.title}}</p>
+                    <p class="title">{{problem.title}}</p>
                     <span style="flex: 1 1 auto;"></span>
                     <nb-icon style="margin: 5px 0 0 0;" icon="edit-outline"></nb-icon>
                 </div>
                 <nb-tag-list>
-                    <nb-tag *ngFor="let tag of card.tags" status="basic" appearance="filled" [text]="tag"></nb-tag>
+                    <nb-tag *ngFor="let tag of problem.tags" status="primary" appearance="filled" [text]="tag">
+                    </nb-tag>
                 </nb-tag-list>
             </nb-card-header>
-
             <nb-card-body>
-                {{card.description}}
+                {{problem.description}}
             </nb-card-body>
         </nb-card>
     </div>
