--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -1,6 +1,6 @@
 <div id="parent">
     <div class="left">
-        <nb-card style="height: 100%;">
+        <nb-card *ngIf="problem" style="height: 100%;">
             <nb-card-body>
                 <nb-tabset>
                     <nb-tab tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
@@ -8,7 +8,7 @@
                             <h1 class="title">
                                 <strong>{{problem.title}}</strong>
                             </h1>
-                            <p class="date">{{problem.createDate | date: "medium"}}</p>
+                            <p class="date">{{problem.createdAt | date: "medium"}}</p>
                             <div class="tags">
                                 <nb-tag *ngFor="let tag of problem.tags" class="tag" status="primary"
                                     appearance="filled" [text]="tag"></nb-tag>
@@ -19,8 +19,8 @@
                             <hr>
                             <div class="content">
                                 <p><strong>Problem statement:</strong></p>
-                                <markdown>
-                                    This is really ***very*** important text.
+                                <markdown [data]="problem.content">
+
                                 </markdown>
                             </div>
                             <hr>
@@ -58,9 +58,11 @@
                     <nb-option>C++</nb-option>
                     <nb-option>Javascript</nb-option>
                 </nb-select>
-                <button nbButton>Run</button>
+                <button nbButton status="primary">
+                    <nb-icon icon="arrow-right-outline"></nb-icon>Run
+                </button>
             </nb-card-body>
         </nb-card>
-        <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
+        <ngx-monaco-editor style="height:100%;" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
     </div>
 </div>
