Fix: Get submission

--- a/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
+++ b/webapp/src/app/pages/home/components/new-problem/new-problem.component.html
@@ -49,7 +49,7 @@
                         <br>
                         Output
                         <textarea class="input-testcase" type="text" nbInput fullWidth status="basic"
-                            placeholder="Expected Output" [(ngModel)]="testcase.output"></textarea>
+                            placeholder="Expected Output" [(ngModel)]="testcase.expected_output"></textarea>
                         <br>
                         Time limit (second)
                         <input class="input-testcase" type="number" nbInput fullWidth status="basic"
