--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -63,6 +63,7 @@
                 </button>
             </nb-card-body>
         </nb-card>
-        <ngx-monaco-editor style="height:100%;" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
+        <ngx-monaco-editor style="height:100%; width: 100%;" [options]="editorOptions" [(ngModel)]="code">
+        </ngx-monaco-editor>
     </div>
 </div>
