--- a/webapp/src/app/pages/home/components/problem/components/submission/submission.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/submission/submission.component.html
@@ -1,7 +1,7 @@
-<nb-card>
-    <nb-card-body>
+<nb-card style="padding:0;">
+    <nb-card-body style="padding: 0;">
 
-        <table [nbTreeGrid]="source" [nbSort]="source" (sort)="updateSort($event)">
+        <table style="width: 100%; height:100%" [nbTreeGrid]="source" [nbSort]="source" (sort)="updateSort($event)">
 
             <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
             <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
