--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -2,8 +2,8 @@
     <div class="left">
         <nb-card *ngIf="problem" style="height: 100%;">
             <nb-card-body style="padding: 0;">
-                <nb-tabset (changeTab)="changeTab()" style="padding: 0;">
-                    <nb-tab tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
+                <nb-tabset (changeTab)="changeTab($event)" style="padding: 0;">
+                    <nb-tab active="{{pb}}" #tabProblem tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
                         <div class="tab-problem">
                             <h1 class="title">
                                 <strong>{{problem.title}}</strong>
@@ -40,11 +40,11 @@
                             </div>
                         </div>
                     </nb-tab>
-                    <nb-tab tabTitle="submission" tabIcon="award-outline" responsive>
+                    <nb-tab active="{{sub}}" tabTitle="submission" tabIcon="award-outline" responsive>
                         <app-submission></app-submission>
                     </nb-tab>
-                    <nb-tab [active]="activeMySubmissionTab" style="padding: 0;" tabTitle="HISTORY"
-                        tabIcon="email-outline" responsive>
+                    <nb-tab active="{{his}}" #tabHistory style="padding: 0;" tabTitle="HISTORY" tabIcon="email-outline"
+                        responsive>
                         <app-history></app-history>
                     </nb-tab>
                 </nb-tabset>
@@ -60,7 +60,8 @@
                     </nb-option>
                 </nb-select>
 
-                <button *ngIf="allowSubmit" (click)="submit()" style="float: right;" nbButton status="primary">
+                <button [disabled]="isSubmitting" *ngIf="allowSubmit" (click)="submit()" style="float: right;" nbButton
+                    status="primary">
                     <nb-icon icon="arrow-right-outline"></nb-icon>Run
                 </button>
             </nb-card-body>
