--- a/webapp/src/app/pages/home/home.component.html
+++ b/webapp/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
     <nb-layout-header>
-        <span id="title">Codeathon</span>
+        <span class="logo" routerLink="/" id="title">Codeathon</span>
         <span style="flex: 1 1 auto;"></span>
 
         <nb-search placeholder="Search problems..."
