--- a/webapp/src/app/pages/home/home.component.scss
+++ b/webapp/src/app/pages/home/home.component.scss
@@ -5,6 +5,10 @@ nb-layout-header {
     width: 100%;
 }
 
+.logo:hover {
+    cursor: pointer;
+}
+
 #title {
     color: white;
     font-weight: bold;
