--- a/webapp/src/app/pages/home/components/problem/components/history/history.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/history/history.component.html
@@ -35,12 +35,11 @@
                     </div>
                 </div>
             </nb-accordion-item-header>
-            <nb-accordion-item-body>
+            <nb-accordion-item-body *ngIf="submission">
                 <div class="body">
-                    <h1 class="score-heading">Your score: 80/100</h1>
-                    <p class="view-code">View Source Code</p>
+                    <h1 class="score-heading">Your score: {{submission.total_score}}/100</h1>
+                    <p (click)="viewSrcCode()" class="view-code">View Source Code</p>
                     <hr>
-                    <!-- <p><strong>#tests</strong></p> -->
                     <div class="testcase">
                         <div *ngFor="let case of history.testcases, index as i">
                             <p style="margin-top: 10px; font-weight: bold;">#test {{i + 1}}</p>
