--- a/webapp/src/app/pages/home/components/problem/components/history/history.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/history/history.component.html
@@ -1,17 +1,17 @@
 <div class="parent">
-    <nb-accordion *ngFor="let history of histories">
+    <nb-accordion *ngFor="let submission of mySubmission">
         <nb-accordion-item>
             <nb-accordion-item-header>
                 <div id="info">
                     <div class="time-submit">
                         <div style="display: flex;">
-                            <p style="margin-top: 3px;">{{date | date: "short"}}
+                            <p style="margin-top: 3px;">{{submission.time| date: "short"}}
                             </p>
                         </div>
                     </div>
                     <div class="timelimit">
                         <div style="display: flex;">
-                            <p style="margin-top: 3px;">3,99 ms
+                            <p style="margin-top: 3px;">{{submission.total_time}} ms
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="clock-outline">
                             </nb-icon>
@@ -19,7 +19,7 @@
                     </div>
                     <div class="memlimit">
                         <div style="display: flex;">
-                            <p style="margin-top: 4.5px;">300 KB
+                            <p style="margin-top: 4.5px;">{{submission.total_memory}} KB
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="save-outline">
                             </nb-icon>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="score">
                         <div style="display: flex;">
-                            <p style="margin-top: 4.5px;">80/100
+                            <p style="margin-top: 4.5px;">{{submission.total_score}}/100
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="star-outline">
                             </nb-icon>
@@ -41,21 +41,20 @@
                     <p (click)="viewSrcCode()" class="view-code">View Source Code</p>
                     <hr>
                     <div class="testcase">
-                        <div *ngFor="let case of history.testcases, index as i">
+                        <div *ngFor="let case of submission.testcases, index as i">
                             <p style="margin-top: 10px; font-weight: bold;">#test {{i + 1}}</p>
                             <div class="detail-testcase">
                                 <div class="input-testcase">
-                                    <textarea [value]="case.inputProblem" disabled class="input-case"
-                                        type="text"></textarea>
+                                    <textarea [value]="case.input" disabled class="input-case" type="text"></textarea>
                                 </div>
                                 <div class="output-testcase">
-                                    <textarea [value]="case.outPut" disabled class="input-case" type="text"></textarea>
+                                    <textarea [value]="case.input" disabled class="input-case" type="text"></textarea>
                                 </div>
                                 <div class="check">
-                                    <nb-icon style="color: green;" *ngIf="case.isTrue" class="icon-testcase"
-                                        icon="checkmark-circle-2-outline"></nb-icon>
-                                    <nb-icon style="color: red;" *ngIf="!case.isTrue" class="icon-testcase"
-                                        icon="close-outline">
+                                    <nb-icon style="color: green;" *ngIf="case.input === case.expected_output"
+                                        class="icon-testcase" icon="checkmark-circle-2-outline"></nb-icon>
+                                    <nb-icon style="color: red;" *ngIf="case.input !== case.expected_output"
+                                        class="icon-testcase" icon="close-outline">
                                     </nb-icon>
                                 </div>
                                 <div class="score">
