--- a/webapp/src/app/pages/home/components/problem/components/history/history.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="parent">
+<div *ngIf="mySubmission.length !== 0" class="parent">
     <nb-accordion *ngFor="let submission of mySubmission">
         <nb-accordion-item>
             <nb-accordion-item-header>
@@ -10,15 +10,15 @@
                         </div>
                     </div>
                     <div class="timelimit">
-                        <div style="display: flex;">
-                            <p style="margin-top: 3px;">{{submission.total_time}} ms
+                        <div nbTooltip="Runtime" style="display: flex;">
+                            <p style="margin-top: 3px;">{{submission.total_time.toFixed(3)}} ms
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="clock-outline">
                             </nb-icon>
                         </div>
                     </div>
                     <div class="memlimit">
-                        <div style="display: flex;">
+                        <div nbTooltip="Memory" style="display: flex;">
                             <p style="margin-top: 4.5px;">{{submission.total_memory}} KB
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="save-outline">
@@ -26,8 +26,8 @@
                         </div>
                     </div>
                     <div class="score">
-                        <div style="display: flex;">
-                            <p style="margin-top: 4.5px;">{{submission.total_score}}/100
+                        <div nbTooltip="Score" style="display: flex;">
+                            <p style="margin-top: 4.5px;">{{submission.score}}/{{submission.total_score}}
                             </p>
                             <nb-icon style="margin-left: 5px;" class="icon" icon="star-outline">
                             </nb-icon>
@@ -37,37 +37,50 @@
             </nb-accordion-item-header>
             <nb-accordion-item-body *ngIf="submission">
                 <div class="body">
-                    <h1 class="score-heading">Your score: {{submission.total_score}}/100</h1>
+                    <h1 class="score-heading">Your score: {{submission.score}}/{{submission.total_score}}</h1>
                     <p (click)="viewSrcCode(submission.source, submission.language_id)" class="view-code">View Source
                         Code</p>
                     <hr>
                     <div class="testcase">
                         <div *ngFor="let case of submission.testcases, index as i">
-                            <p style="margin-top: 10px; font-weight: bold;">#test {{i + 1}}</p>
-                            <div class="detail-testcase">
-                                <div class="input-testcase">
-                                    <textarea [value]="case.Input" disabled class="input-case" type="text"></textarea>
+                            <p style="margin-top: 10px; font-weight: bold; font-family: Open Sans, sans-serif;">#test
+                                {{i + 1}}</p>
+                            <div class="row-case">
+                                <div class="example">
+                                    <p class="text-example">
+                                        <span>
+                                            <strong>
+                                                Input:
+                                            </strong>
+                                            {{case.Input || "NULL"}}
+                                        </span>
+                                    </p>
+                                    <p class="text-example">
+                                        <span>
+                                            <strong>
+                                                ExpectedOutput:
+                                            </strong>
+                                            {{case.ExpectedOutput || "NULL"}}
+                                        </span>
+                                    </p>
                                 </div>
-                                <div class="output-testcase">
-                                    <textarea [value]="case.Message" disabled class="input-case" type="text"></textarea>
-                                </div>
-                                <div class="check">
-                                    <nb-icon style="color: green;" *ngIf="case.Message !=='FAIL'" class="icon-testcase"
-                                        icon="checkmark-circle-2-outline"></nb-icon>
-                                    <nb-icon style="color: red;" *ngIf="case.Message ==='FAIL'" class="icon-testcase"
-                                        icon="close-outline">
+                                <div class="row-case-check">
+                                    <nb-icon *ngIf="case.Message === 'PASS' " style="color: green;"
+                                        class="icon-testcase" icon="checkmark-circle-2-outline">
                                     </nb-icon>
-                                </div>
-                                <div class="score">
-                                    <p class="score-case">20</p>
+                                    <nb-icon style="color: red;" *ngIf="case.Message === 'FAIL'" class="icon-testcase"
+                                        icon="close-outline"></nb-icon>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </nb-accordion-item-body>
         </nb-accordion-item>
     </nb-accordion>
 
+</div>
+
+<div class="" *ngIf="mySubmission.length === 0">
+    <p class="no-submission">You don't have any submissions yet.</p>
 </div>
