--- a/webapp/src/app/pages/home/components/problem/components/submission/submission.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/submission/submission.component.html
@@ -1,7 +1,7 @@
 <nb-card style="padding:0;">
     <nb-card-body style="padding: 0;">
 
-        <table style="width: 100%; height:100%" [nbTreeGrid]="source" [nbSort]="source" (sort)="updateSort($event)">
+        <table style="width: 100%; height:100%" [nbTreeGrid]="source" [nbSort]="source">
 
             <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
             <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
@@ -26,3 +26,13 @@
 
     </nb-card-body>
 </nb-card>
+
+<!--<div *ngFor="let submission of submissions" >-->
+<!--  <div>-->
+<!--    <p>Submit by: </p>-->
+<!--    <p>Time: {{submission.total_time}}</p>-->
+<!--    <p>Memory: {{submission.total_memory}}</p>-->
+<!--    <p>Language: {{getLanguage(submission.language_id)}}</p>-->
+<!--    <p>Score: {{submission.score}}</p>-->
+<!--  </div>-->
+<!--</div>-->
