--- a/webapp/src/app/pages/home/components/problem/problem.component.html
+++ b/webapp/src/app/pages/home/components/problem/problem.component.html
@@ -1,6 +1,7 @@
-<div id="parent">
+<app-spinkit *ngIf="!problem"></app-spinkit>
+<div id="parent" *ngIf="problem">
     <div class="left">
-        <nb-card *ngIf="problem" style="height: 100%;">
+        <nb-card style="height: 100%;">
             <nb-card-body style="padding: 0;">
                 <nb-tabset (changeTab)="changeTab($event)" style="padding: 0;">
                     <nb-tab active="{{pb}}" #tabProblem tabTitle="PROBLEM" tabIcon="alert-triangle-outline" responsive>
@@ -26,23 +27,31 @@
                             <hr>
                             <p><strong>Samples:</strong> </p>
                             <div *ngFor="let sample of problem.samples, index as i">
-                                <p style="margin-top: 10px; font-weight: bold;">case# {{i + 1}}</p>
+                                <p style="margin-top: 10px; font-weight: bold;">Case: {{i + 1}}</p>
                                 <div class="example">
-                                    <div class="example-left">
-                                        <textarea disabled [value]="sample.input" class="input-ex" type="text" name=""
-                                            id=""></textarea>
-                                    </div>
-                                    <div class="example-right">
-                                        <textarea disabled [value]="sample.output" class="input-ex" type="text" name=""
-                                            id=""></textarea>
-                                    </div>
+                                    <p class="text-example">
+                                        <span>
+                                            <strong>
+                                                Input:
+                                            </strong>
+                                            {{sample.input}}
+                                        </span>
+                                    </p>
+                                    <p class="text-example">
+                                        <span>
+                                            <strong>
+                                                Output:
+                                            </strong>
+                                            {{sample.output}}
+                                        </span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </nb-tab>
-                    <nb-tab active="{{sub}}" tabTitle="submission" tabIcon="award-outline" responsive>
+                    <!-- <nb-tab active="{{sub}}" tabTitle="submission" tabIcon="award-outline" responsive>
                         <app-submission [problemId]="problemId"></app-submission>
-                    </nb-tab>
+                    </nb-tab> -->
                     <nb-tab active="{{his}}" #tabHistory style="padding: 0;" tabTitle="HISTORY" tabIcon="email-outline"
                         responsive>
                         <app-history [problem_id]="problemId" (sourceCode)="viewSrcCode($event)"></app-history>
